tests/NormalTests/paczka1/fuzzy1/67775459.err
Error in line 2: 73UY A216 68,31
Error in line 6: 8eFMF A216 -2,3
Error in line 3: 73UY A216 21,8
Error in line 8: oJL9vJlZfy S471 24,4
Error in line 9: S471 S471 28,5
Error in line 7: 73UY S52 42,5
Error in line 4: 8eFMF A216 28,5
Error in line 28: 8eFMF S471 48,9
Error in line 32: z8E9R76hk0k A216 5,2
Error in line 29: 73UY S52 38,1
Error in line 39: 73UY S471 30,1
